--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@ h1 {
 }
 #current-location {
   border-radius: 80px;
-  padding: 5px;
+  padding: 2px;
   border-color: hsla(53, 98%, 51%, 0.9045);
   background-color: #6ad5f8;
   margin: 5px;
@@ -29,7 +29,7 @@ h1 {
   padding: 5px;
 }
 p {
-  color: black;
+  color: #0690be;
   font-size: 12px;
   font-weight: bold;
   margin: 0 auto;
@@ -56,13 +56,13 @@ img {
   bottom: 0;
   max-height: 600px;
   display: block;
-
+  margin-top: 10px;
   padding: 30px;
   right: 0;
 }
 
 .description {
-  color: hsla(53, 89%, 82%, 0.904);
+  color: hsla(53, 98%, 51%, 0.9045);
   margin: 0 auto;
   font-size: 20px;
 }
@@ -100,11 +100,13 @@ img {
 }
 .weather-forecast-temp-min {
   font-size: small;
+  color: #0690be;
+}
+.divider {
+  color: #0690be;
 }
 #code,
 a {
   font-size: small;
   text-align: center;
-  padding: 10px;
-  margin: 5px;
 }
